added verification url to signed document, added encryption of signed document  and upload to s3

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 INFURA_API_KEY=key
 INFURA_API_SECRET=key
 ETHERSCAN_API_KEY=key
+AWS_ACCESS_ID=key
+AWS_ACCESS_SECRET=key
+BUCKET_NAME=name
+S3_REGION=region
