--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js localhost 8080",
     "dev:server": "nodemon --watch './**/*.ts' --exec 'ts-node' index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +15,7 @@
     "@govtechsg/oa-verify": "^7.5.0",
     "@govtechsg/open-attestation": "^6.0.2",
     "@govtechsg/opencerts-verify": "^3.1.0",
+    "aws-sdk": "^2.1012.0",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.12"
   },
