--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "dependencies": {
     "@govtechsg/document-store": "^2.2.2",
     "@govtechsg/oa-encryption": "^1.3.3",
-    "@govtechsg/oa-verify": "^7.5.0",
-    "@govtechsg/open-attestation": "^6.0.2",
+    "@govtechsg/oa-verify": "^7.7.0",
+    "@govtechsg/open-attestation": "^6.2.0",
     "@govtechsg/opencerts-verify": "^3.1.0",
     "aws-sdk": "^2.1012.0",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^16.7.10",
+    "@types/uuid": "^8.3.3",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   }
